# fdk-fulltext-search-rabbit-consumer

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yaml  deploy-demo.yaml  deploy-prod&demo.yaml  deploy-prod.yaml  deploy-staging.yaml  run-tests.yaml
src/: config.py  main.py
src/adapter/: fulltext_ingest.py  rabbit.py
test/: test_build.py
